--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.3.0",
+    "@reach/router": "^1.2.1",
+    "bootstrap": "^4.3.1",
+    "firebase": "^7.6.0",
+    "node-sass": "^4.12.0",
+    "react-animations": "^1.0.0",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.7.15",
+    "react-transition-group": "^4.3.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
